# anitaAwareFileMaker

./: AnitaAwareHandler.cxx  CMakeLists.txt  LinkDef.h  Makefile  Makefile.legacy  addRunToMapFile.cxx  antarctica  makeAcqdStartRunJsonFiles.cxx  makeAdu5PatJsonFiles.cxx  makeAdu5SatJsonFiles.cxx  makeAdu5VtgJsonFiles.cxx  makeAvgSurfHkJsonFiles.cxx  makeEventJsonFiles.cxx  makeG12PosJsonFiles.cxx  makeG12SatJsonFiles.cxx  makeGpsGgaJsonFiles.cxx  makeGpuSourceJsonFiles.cxx  makeHeaderJsonFiles.cxx  makeHkJsonFiles.cxx  makeMonitorHkJsonFiles.cxx  makeOtherMonitorHkJsonFiles.cxx  makePrettyHkJsonFiles.cxx  makeSSHkJsonFiles.cxx  makeSlowRateHkJsonFiles.cxx  makeSumTurfRateJsonFiles.cxx  makeSurfHkJsonFiles.cxx  makeTurfRateJsonFiles.cxx  makeWaveformSummaryJsonFiles.cxx  processConfig.py  runGpsSourcePlotter.sh  setupAwareVariables.sh  setupAwareVariablesUCL.sh  updateName.sh
antarctica/: processConfigTelem.sh  processRun.sh  processRunRootOnly.sh  processRunTelem.sh  processTelemRun.sh
include/: AnitaAwareHandler.h
palestine/: copyDataFromFlight.sh  getRawPalestineData.sh  (+7 more)
programs/: CMakeLists.txt  addRunToMapFile.cxx  makeAdu5PatJsonFiles.cxx  makeAdu5SatJsonFiles.cxx  makeAvgSurfHkJsonFiles.cxx  makeG12SatJsonFiles.cxx  makeGpuPowerSpectrumImages.cxx  makeGpuPowerSpectrumJsonFiles.cxx  makeGpuSourceJsonFiles.cxx  makeHeaderJsonFiles.cxx  makeHkJsonFiles.cxx  makeMonitorHkJsonFiles.cxx  makeSlowRateHkJsonFiles.cxx  makeSumTurfRateJsonFiles.cxx  makeSurfHkJsonFiles.cxx  makeTuffStatusJsonFiles.cxx  makeTurfRateJsonFiles.cxx  makeWaveformSummaryJsonFiles.cxx
(+48 files in other folders)
